--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
     "cookie-parser": "~1.4.4",
     "css-loader": "^5.1.3",
     "debug": "^2.6.9",
@@ -29,6 +30,7 @@
     "vue-loader": "^15.9.6",
     "vue-property-decorator": "^9.1.2",
     "vue-template-compiler": "^2.6.12",
+    "vuex": "^3.6.2",
     "webpack": "^5.26.3"
   },
   "devDependencies": {
